fix horizontal scrollbar on rtl languages

--- a/style/pagelayout.css
+++ b/style/pagelayout.css
@@ -198,4 +198,5 @@ body {
 
 .dir-rtl {
     direction: ltr;
+    overflow-x: hidden;
 }
